<resources>
    <string name="app_name">CooFilm</string>
    <string name="action_settings">Settings</string>
    <string name="submit_artical">Contributions</string>
    <string name="love_shot_film">Shoting Film</string>
    <string name="read_more">load more</string>
    <string name="artical_title">Article </string>
    <string name="loading">loading……</string>
    <string name="error_title">oops……</string>
    <string name="error_content">Something went wrong! Error info:</string>
    <string name="error_content_unknown">Something went wrong! please try again</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancle</string>
    <string name="main_page">Contributions</string>
    <string name="love_photos">Shoting films</string>
    <string name="love_equipment">Arsenal</string>
    <string name="love_life">Lifestyle</string>
    <string name="activities">Activities</string>
    <string name="slr">Slr</string>
    <string name="tlr">Tlr</string>
    <string name="pocket_cam">Pocket cam</string>
    <string name="rangefinder_cam">Rangefinder cam</string>
    <string name="photos">Photos</string>
    <string name="excellent">Coolfilm select</string>
    <string name="tech">Knowing</string>
    <string name="love_life_1">Original</string>
    <string name="love_life_2">Talk</string>
    <string name="love_life_3">Movies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_coofilm">about feilinshu</string>
    <string name="about_developer">about developer</string>
    <string name="clear_cache">clear cache</string>
    <string name="exit">Exit</string>
    <string name="share">share</string>
    <string name="share_article">share this article</string>
    <string name="update">Check update</string>
    <string name="about_title"> This application is the unofficial client of the Coofilm website. The data is analyzed from HTML, only for communication, no commercial</string>
    <string name="version">current version:</string>
    <string name="about_card2_title">If you liked the app, feel free to contact me.</string>
    <string name="about_google_play">Rate on coolapk</string>
    <string name="about_email">Feedback by E-mail</string>
    <string name="about_git_hub">Source code on GitHub</string>
    <string name="about_email_intent">About:Coofilm</string>
    <string name="about_not_found_email">Not found email app</string>
    <string name="clear_cache_description">clear cache? cache size is about  %1$s </string>
    <string name="permissions_description">Please grant the application to read and write external storage permissions, which are used only to save the image.</string>
    <string name="permissions_grant_fail">Failed to grant permission！</string>
    <string name="save_pic_title">Save picture</string>
    <string name="save_pic_content">Want to save this picture to %1$s?</string>
    <string name="loading_error">Loading error,tab the screen to try again</string>
    <string name="network_unavailable">Network exception, please check network connection</string>
    <string name="share_content">%1$s %2$s shared from coofilm.com</string>
</resources>
